--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,6 +9,10 @@
     "BroadcastingConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgres; Database=broadcasting",
     "IdentityConnection": "Server=localhost; Port=5432; User Id=postgres; Password=postgres; Database=identity",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "authentication key",
+    "Issuer": "https://localhost:5001"
   }
 }
   
