Email confirmation and basic middlewares

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -13,6 +13,11 @@
   "Token": {
     "Key": "authentication key",
     "Issuer": "https://localhost:5001"
+  },
+  "EmailCredentials": {
+    "Host": "",
+    "Address": "",
+    "Password": ""
   }
 }
   
