--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -8,6 +8,7 @@
         <ProjectReference Include="..\Core\Core.csproj"/>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="MailKit" Version="3.6.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
