--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -12,7 +12,8 @@
   },
   "Token": {
     "Key": "authentication key",
-    "Issuer": "https://localhost:5001"
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001"
   },
   "EmailCredentials": {
     "Host": "",
