Client identity, minor fixes and CORS

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -19,6 +19,12 @@
     "Host": "",
     "Address": "",
     "Password": ""
+  },
+  "CORS": {
+    "Default": "http://localhost:4200"
+  },
+  "Urls": {
+    "EmailConfirmationRedirection": "http://localhost:4200/email-confirmed"
   }
 }
   
