--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,5 +6,6 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4"/>
+        <PackageReference Include="Sieve" Version="2.5.5"/>
     </ItemGroup>
 </Project>
