--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,10 @@
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "ngx-bootstrap": "^10.2.0",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
-    "toastr": "^2.1.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
