--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,8 @@
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "moment": "^2.29.4",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
