Piece details page, server side caching, search bar and pagination

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.7",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -20,7 +21,11 @@
     "@angular/router": "^15.2.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
+    "chartjs-plugin-annotation": "^2.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "font-awesome": "^4.7.0",
+    "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.1.0",
@@ -32,6 +37,10 @@
     "@angular-devkit/build-angular": "^15.2.5",
     "@angular/cli": "~15.2.5",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/d3": "^7.4.0",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.5",
+    "@types/d3-shape": "^3.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
