--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="EPPlus" Version="6.2.2"/>
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3"/>
