--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.2.1",
     "chartjs-plugin-annotation": "^2.2.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^10.2.0",
@@ -41,6 +42,7 @@
     "@types/d3-scale": "^4.0.3",
     "@types/d3-selection": "^3.0.5",
     "@types/d3-shape": "^3.1.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
