--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -19,7 +19,7 @@
     "Default": "http://localhost:4200"
   },
   "Urls": {
-    "EmailConfirmationRedirection": "http://localhost:4200/email-confirmed"
+    "EmailConfirmationRedirection": "https://localhost:5001/email-confirmed"
   }
 }
   
