Refactor Piece and ProgrammeItems repositories

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "BroadcastingConnection": "Server=localhost; Port=5433; User Id=postgres; Password=postgres; Database=broadcasting",
+    "IdentityConnection": "Server=localhost; Port=5433; User Id=postgres; Password=postgres; Database=identity",
+    "Redis": "localhost"
+  },
+  "EmailCredentials": {
+    "Host": "",
+    "Address": "",
+    "Password": ""
+  },
+  "CORS": {
+    "Default": "http://localhost:4200"
+  },
+  "Urls": {
+    "EmailConfirmationRedirection": "https://localhost:5001/email-confirmed"
+  },
   "AllowedHosts": "*"
 }
